--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
 <html>
-vasantha
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>welocme to world</h1>
+<p>Hi Hello.</p>
+
+</body>
 </html>
