--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>welocme to world</h1>
-<p>Hi Hello.</p>
+<h1>welocme to world this is my web page </h1>
+<p>Hi Hello how are you.</p>
 
 </body>
 </html>
