--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>welocme to world this is my web page </h1>
-<p>Hi Hello how are you.</p>
+<p>Hi Hello vasantha.</p>
 
 </body>
 </html>
